--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,26 +1,29 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-4">
+  <div class="container">
 
-  <a class="navbar-brand" routerLink="/">MAIA - FIN$</a>
- 
-  <button class="navbar-toggler" type="button" data-toggle="collapse"
-    data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-    aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" routerLinkActive="active" routerLink="/reports">Relatórios
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLinkActive="active" routerLink="/entries">Lançamentos</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLinkActive="active" routerLink="/categories">Categorias</a>
-      </li>
-    </ul>
+    <a class="navbar-brand" routerLink="/">MAIA - FIN$</a>
+
+    <button class="navbar-toggler" type="button" data-toggle="collapse"
+      data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+      aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" routerLinkActive="active" routerLink="/reports">Relatórios
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLinkActive="active" routerLink="/entries">Lançamentos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLinkActive="active"
+            routerLink="/categories">Categorias</a>
+        </li>
+      </ul>
+    </div>
   </div>
 </nav>
 
