--- a/src/app/pages/categories/category-form/category-form.component.html
+++ b/src/app/pages/categories/category-form/category-form.component.html
@@ -1,3 +1,50 @@
-<p>
-  category-form works!
-</p>
+<nav class="mb-5">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a routerLink="/">Home</a></li>
+        <li class="breadcrumb-item"><a routerLink="/categories">Categorias</a></li>
+        <li class="breadcrumb-item active">Formulário de Categorias</li>
+    </ol>
+</nav>
+
+
+<div class="row mb-4">
+    <div class="col-md">
+        <h1 class="h2 border-left pl-2" style="color: rgba(233, 98, 49, 0.829)">
+            Formulário de Categoria
+        </h1>
+    </div>
+
+    <div class="col-md">
+        <a routerLink="/categories" class="btn btn-ligth float-right">
+            <i class="fas fa-angle-double-left"></i>
+            <label> Voltar</label>
+        </a>
+    </div>
+</div>
+
+<!-- FORMULARIO -->
+<form>
+    <div class="card">
+        <div class="card-header">
+            <label> Informações sobre a categoria</label>
+        </div>
+
+        <div class="card-body">
+            <div class="form-row">
+                <div class="form-group col-md-4">
+                    <label for="name">Nome</label>
+                    <input type="text" class="form-control" id="name">
+                </div>
+
+                <div class="form-group col-md-8">
+                    <label for="description">Descrição</label>
+                    <input type="text" class="form-control" id="description">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <button type="submit" class="btn btn-primary btn-lg mt-2 float-right">
+        <i class="fas fa-save"></i> Salvar</button>
+
+</form>
