--- a/src/app/pages/categories/category-form/category-form.component.html
+++ b/src/app/pages/categories/category-form/category-form.component.html
@@ -23,7 +23,7 @@
 </div>
 
 <!-- FORMULARIO -->
-<form [formGroup] = "categoryForm">
+<form [formGroup]="categoryForm" (submit)="submitForm()">
     <div class="card">
         <div class="card-header">
             <label> Informações sobre a categoria</label>
@@ -33,18 +33,31 @@
             <div class="form-row">
                 <div class="form-group col-md-4">
                     <label for="name">Nome</label>
-                    <input type="text" class="form-control" id="name">
+                    <input type="text" class="form-control" id="name"
+                        formControlName="name">
+
+                    <div class="text-danger"
+                        *ngIf="categoryForm.get('name').invalid &&
+                        categoryForm.get('name').touched">
+                        <div *ngIf="categoryForm.get('name').errors['required']">Campo Obrigatório.</div> 
+                    </div>
                 </div>
+
 
                 <div class="form-group col-md-8">
                     <label for="description">Descrição</label>
-                    <input type="text" class="form-control" id="description">
+                    <input type="text" class="form-control" id="description"
+                        formControlName="description">
                 </div>
             </div>
         </div>
+
     </div>
 
-    <button type="submit" class="btn btn-primary btn-lg mt-2 float-right">
-        <i class="fas fa-save"></i> Salvar</button>
+    <button 
+        type="submit"
+        class="btn btn-primary btn-lg mt-2 float-right">
+        <i class="fas fa-save"></i> Salvar
+    </button>
 
 </form>
