Correção no Service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,7 +20,7 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLinkActive="active"
-            routerLink="/categories">Categorias</a>
+            routerLink="categories">Categorias</a>
         </li>
       </ul>
     </div>
