--- a/src/app/pages/categories/category-form/category-form.component.html
+++ b/src/app/pages/categories/category-form/category-form.component.html
@@ -23,7 +23,7 @@
 </div>
 
 <!-- FORMULARIO -->
-<form [formGroup]="categoryForm" (submit)="submitForm()">
+<form [formGroup]="categoryForm" (ngSubmit)="submitForm()">
     <div class="card">
         <div class="card-header">
             <label> Informações sobre a categoria</label>
