--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,17 +11,20 @@
 
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
+       
         <li class="nav-item">
           <a class="nav-link" routerLinkActive="active" routerLink="/reports">Relatórios
           </a>
         </li>
+
         <li class="nav-item">
           <a class="nav-link" routerLinkActive="active" routerLink="/entries">Lançamentos</a>
         </li>
+
         <li class="nav-item">
-          <a class="nav-link" routerLinkActive="active"
-            routerLink="categories">Categorias</a>
+          <a class="nav-link" routerLinkActive="active" routerLink="categories">Categorias</a>
         </li>
+
       </ul>
     </div>
   </div>
