impl-> Formulario de Lançamento

--- a/src/app/pages/entries/entry-list/entry-list.component.html
+++ b/src/app/pages/entries/entry-list/entry-list.component.html
@@ -56,7 +56,7 @@
                         btn-sm"> Editar <i class="fas fa-edit"></i>
                     </a>
 
-                <button type="button" (click)="deleteEntry(category)" class="btn
+                <button type="button" (click)="deleteEntry(entry)" class="btn
                         btn-outline-danger btn-sm">
                         Delete
                         <i class="fas fa-eraser"></i>
