Melhorando Formulario de Lançamentos

--- a/src/app/pages/categories/category-list/category-list.component.html
+++ b/src/app/pages/categories/category-list/category-list.component.html
@@ -37,9 +37,12 @@
             <!-- Botões-->
             <td>
                 <a [routerLink]="[category.id, 'edit']" class="btn btn-outline-info mr-1
-                    btn-sm"> Editar <i class="fas fa-edit"></i></a>
+                    btn-sm"> Editar <i class="fas fa-edit"></i>
+                </a>
+                
                 <button type="button" (click)="deleteCategory(category)" class="btn
-                    btn-outline-danger btn-sm">Delete<i class="fas fa-eraser"></i></button>
+                    btn-outline-danger btn-sm">Delete<i class="fas fa-eraser"></i>
+                </button>
             </td>
         </tr>
     </tbody>
