--- Auto-Git Commit ---

--- a/src/app/pages/entries/entry-form/entry-form.component.html
+++ b/src/app/pages/entries/entry-form/entry-form.component.html
@@ -70,7 +70,7 @@
                             <div class="input-group-text"> R$ </div>
                         </div>
                         <!-- imask , define a mascara do campo-->
-                        <input [imask]="imaskConfig" type="text" class="form-control text-right" id="valor"
+                        <input  type="text" class="form-control text-right" id="valor"
                             formControlName="amount">
                     </div>
 
