Criando Componente BreadCrunmb

--- a/src/app/pages/categories/category-list/category-list.component.html
+++ b/src/app/pages/categories/category-list/category-list.component.html
@@ -1,3 +1,6 @@
+ <!--Migalha de Pão-->
+ <app-bread-crumb></app-bread-crumb>
+
  <nav class="mb-5">
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a routerLink="/">Home</a></li>
