Add BreadCrump aos templates , e remoção de JS não utilizados

--- a/src/app/pages/categories/category-list/category-list.component.html
+++ b/src/app/pages/categories/category-list/category-list.component.html
@@ -1,12 +1,7 @@
  <!--Migalha de Pão-->
- <app-bread-crumb></app-bread-crumb>
-
- <nav class="mb-5">
-    <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a routerLink="/">Home</a></li>
-        <li class="breadcrumb-item active">Categorias</li>
-    </ol>
-</nav>
+ <app-bread-crumb
+    [items]= "[{text: 'Categorias'}]"
+ > </app-bread-crumb>
 
 
 <div class="row mb-4">
