--- a/src/app/pages/categories/category-form/category-form.component.html
+++ b/src/app/pages/categories/category-form/category-form.component.html
@@ -1,14 +1,8 @@
 
-
-
-<nav class="mb-5">
-    <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a routerLink="/">Home</a></li>
-        <li class="breadcrumb-item"><a routerLink="/categories">Categorias</a></li>
-        <li class="breadcrumb-item active">{{pageTitle}}</li>
-    </ol>
-</nav>
-
+ <!--Migalha de Pão-->
+ <app-bread-crumb
+ [items]= "[{text: 'Category', link: '/categories'}, {text: pageTitle}]"
+ > </app-bread-crumb>
 
 <div class="row mb-4">
     <div class="col-md">
