--- a/src/app/pages/entries/entry-form/entry-form.component.html
+++ b/src/app/pages/entries/entry-form/entry-form.component.html
@@ -1,15 +1,11 @@
-<nav class="mb-5">
-    <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a routerLink="/">Home</a></li>
-        <li class="breadcrumb-item"><a routerLink="/entries">Lançamentos</a></li>
-        <li class="breadcrumb-item active">{{pageTitle}}</li>
-    </ol>
-</nav>
-
+ <!--Migalha de Pão-->
+ <app-bread-crumb
+ [items]= "[{text: 'Lançamentos', link: '/entries'}, {text: pageTitle}]"
+ > </app-bread-crumb>
 
 <div class="row mb-4">
     <div class="col-md-9">
-        <h1 class="h2 border-left pl-2" style="color: rgba(233, 98, 49, 0.829)">
+        <h1 class="h2 border-left pl-2" style="color: rgba(197, 106, 73, 0.829)">
             {{pageTitle}}
         </h1>
     </div>
